/* 
  Localizable.strings
  Travaartje

  Created by Berrie Kremers on 21/07/2020.
  Copyright © 2020 Katoemba Software. All rights reserved.
*/

"Send" = "Send";
"In Progress" = "In Progress";
"Send Again" = "Send Again";
"Retry" = "Retry";
"Name" = "Name";
"Description" = "Description";
"Commute" = "Commute";
"Workout Details" = "Workout Details";
"Run" = "Run";
"Ride" = "Ride";
"Swim" = "Swim";
"Skiing" = "Skiing";
"Rowing" = "Rowing";
"Skating" = "Skating";
"Soccer" = "Soccer";
"Snowboard" = "Snowboard";
"Surfing" = "Surfing";
"Hike" = "Hike";
"Walk" = "Walk";
"Weelchair" = "Wheelchair";
"Crossfit" = "Crossfit";
"Rock Climb" = "Rock Climb";
"Sail" = "Sail";
"Yoga" = "Yoga";
"Paddle" = "Paddle";
"Golf" = "Golf";
"Other" = "Other";
"New" = "New";
"Uploaded" = "Uploaded";
"Failed" = "Failed";
"Generating File" = "Generating File";
"Uploading File" = "Uploading File";
"Processing by Strava" = "Processing by Strava";
"Done" = "Done";
"Settings" = "Settings";
"Connect your Strava account" = "Connect your Strava account";
"Travaartje is not connected to your Strava account. You can do this on the settings page." = "Travaartje is not connected to your Strava account. You can do this on the settings page.";
"Strava account" = "Strava account";
"Connect your Strava account" = "Connect your Strava account";
"Follow the developer on Strava" = "Follow the developer on Strava";
"What's new" = "What's new";
"Frequently asked questions" = "Frequently asked questions";
"Privacy" = "Privacy";
"Acknowledgements" = "Acknowledgements";
"Report a problem" = "Report a problem";
"No route data" = "No route data";
"Travaartje could not find route data for this workout. Do you want to upload it without a route?" = "Travaartje could not find route data for this workout. Do you want to upload it without a route?";
"Yes" = "Yes";
"No" = "No";
"Close" = "Close";
"Exclude heart rate upon insufficient measurements" = "No heart rate upon insufficient measurements";

"Welcome" = "Welcome";
"Travaartje lets you upload workouts that you recorded with the Workout app on your AppleWatch or iPhone to Strava in the easiest possible way." = "Travaartje lets you upload workouts that you recorded with the Workout app on your AppleWatch or iPhone to Strava in the easiest possible way.";
"We will now guide you through the setup process in a few simple steps, so that you can get started." = "We will now guide you through the setup process in a few simple steps, so that you can get started.";
"Give HealthKit access" = "Give HealthKit access";
"Travaartje needs access to your workout data so it can show your recent workouts. Click the above button to open the configuration screen (this may take a few seconds)." = "Travaartje needs access to your workout data so it can show your recent workouts. Click the above button to open the configuration screen (this may take a few seconds).";
"Connect to Strava" = "Connect to Strava";
"Travaartje needs to be authorized before it can upload workouts to Strava. Click the button above to go to Strava to provide this authorization." = "Travaartje needs to be authorized before it can upload workouts to Strava. Click the button above to go to Strava to provide this authorization.";
"Get started" = "Get started";
"All set, let's get started!" = "All set, let's get started!";

"No workouts found, did you give Travaartje access to your workouts in the Privacy settings?" = "No workouts found, did you give Travaartje access to your workouts in the Privacy settings?";

"No new workouts" = "No new workouts";
"Show new workouts and upload them with 1 click." = "Your latest workouts, ready to upload.";
"All set, let's get started!\n\nOh, and if you're running iOS 14 or later, don't forget to checkout the Travaartje widget that shows your latest workout on your homescreen with the possibility to upload them with 1 click." = "All set, let's get started!\n\nOh, and if you're running iOS 14 or later, checkout the Travaartje widget that shows your latest workout on your homescreen with the possibility to upload it to Strava with 1 click.";
"Would you like to upload your workouts even quicker?\n\nCheckout the Travaartje widget that shows your latest workout on your homescreen with the possibility to upload it with 1 click." = "Would you like to upload your workouts even quicker?\n\nCheckout the Travaartje widget that shows your latest workout on your homescreen with the possibility to upload it with 1 click.";
