...
                    Image(systemName: "exclamationmark.triangle")
                        .accessibility(identifier: "WorkoutStateIcon")
                        .foregroundColor(.yellow)

                    Text("No route data")
                        .foregroundColor(.yellow)
                        .accessibility(identifier: "NoRouteWarning")
                }
            }
            
            Divider()
                .padding(.horizontal, -10.0)

...
